--- a/Notebook 1.ipynb
+++ b/Notebook 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "48c3012f-408c-4eee-aa6b-507d075d7d36",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b8ecfcc8-3912-4db4-9c17-28961a1d1c7d",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b5e23686-439f-4304-9498-c210e940b2ac",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "53119a8b-2426-48b5-afe5-98248f142abf",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "25d0b3aa-ac2c-40a9-983a-695d7c471f5e",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "028fe02b-f5a6-4b8e-b240-7489ae501dea",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "36630fe7-29ee-4fbd-9281-939afba7d97b",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b0c681ca-bcc9-4993-aaec-3c8aa5b61456",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f32b74bb-4794-4346-9b35-3465df36b6e7",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4653ba1b-17e4-4e7e-9ce0-021d8918580e",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "844b1174-07da-471d-b116-0bf36979328e",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2b1199e3-8781-4be2-961e-f46c700fb09b",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "88c84c16-14ec-4ce7-91db-7ff52e0f775f",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2b8f222f-775d-4999-bf22-39e706cdffa2",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "27c95613-5dfd-4aec-9529-6978bb160198",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4e953f82-17d8-4f9f-a07c-82d2ee0dbcda",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e89224b0-a3b4-4f62-8a96-5f4a42e7175c",
    "metadata": {},
    "outputs": [],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f3597679-aea6-4825-be9b-8d91e7e490a9",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "436b3904-992c-42d3-a50e-fc850b588087",
    "metadata": {},
    "outputs": [],
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "0e4640bf-0f47-434f-9091-9f41b0ebafb3",
    "metadata": {},
    "outputs": [],
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a62198aa-ce82-471b-84f5-448e44f61150",
    "metadata": {},
    "outputs": [],
@@ -575,9 +575,9 @@
     "MODEL_NAME = 'MLP0HourMemory'\n",
     "MODEL_VERSION = 1.0\n",
     "TUNING_PATIENCE = 5\n",
-    "TUNING_EPOCHS = 1\n",
+    "TUNING_EPOCHS = 50\n",
     "TESTING_PATIENCE = 10\n",
-    "TESTING_EPOCHS = 1"
+    "TESTING_EPOCHS = 100"
    ]
   },
   {
@@ -684,7 +684,6 @@
    "cell_type": "markdown",
    "id": "4cca5257-30f0-4776-88ea-1db9e98acb51",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -706,7 +705,7 @@
     "\n",
     "model = get_model(MODEL_NAME, **study.best_params)\n",
     "\n",
-    "model, loss_test_mse, loss_test_mae, loss_test_mse_unscaled, loss_test_mae_unscaled, relative_error, max_error_absolute, max_error_relative = evaluate_for_testing(\n",
+    "model, loss_test_mse, loss_test_mae, loss_test_mse_unscaled, loss_test_mae_unscaled, relative_error, max_error_absolute, max_error_relative, epoch = evaluate_for_testing(\n",
     "    model, \n",
     "    dataset_eval_train, \n",
     "    dataset_eval_validation, \n",
@@ -737,7 +736,8 @@
     "        \"learning_rate\": study.best_params['learning_rate'],\n",
     "        \"weight_decay\": study.best_params['weight_decay'],\n",
     "        \"patience\": TESTING_PATIENCE,\n",
-    "        \"epochs\": TESTING_EPOCHS\n",
+    "        \"epochs\": TESTING_EPOCHS,\n",
+    "        \"effective epochs\": epoch\n",
     "    })\n",
     "    mlp.log_metrics({\n",
     "        \"MAE normalized * 1e6\": loss_test_mse * 1e6,\n",
@@ -775,7 +775,9 @@
   {
    "cell_type": "markdown",
    "id": "59abfc47-5902-484d-965c-686d62f8f31c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# UI MlOps"
    ]
@@ -793,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96ce98fd-3a63-4f52-94db-272730aa2451",
+   "id": "338c8325-1401-4ea2-9fd8-3064a0c88e6b",
    "metadata": {},
    "outputs": [],
    "source": []
