Following last commit

--- a/Notebook 1.ipynb
+++ b/Notebook 1.ipynb
@@ -52,6 +52,7 @@
    "cell_type": "markdown",
    "id": "7059dbed-6531-4b87-a1e1-cb9f20ac0623",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -692,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "62b2221d-9946-4b1a-bb96-e22acd326858",
    "metadata": {},
    "outputs": [],
