Add scaler saving and loading

--- a/Notebook preprocessing.ipynb
+++ b/Notebook preprocessing.ipynb
@@ -484,10 +484,10 @@
    "source": [
     "for i in range(4):\n",
     "    \n",
-    "    with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'dataset_tunung_train_' + str(i) + '.pt'), 'wb') as file:\n",
+    "    with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'dataset_tuning_train_' + str(i) + '.pt'), 'wb') as file:\n",
     "        torch.save(dataset_tuning_trains[i], file, pickle_module=pickle, pickle_protocol=4)\n",
     "        \n",
-    "    with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'dataset_tunung_validation_' + str(i) + '.pt'), 'wb') as file:\n",
+    "    with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'dataset_tuning_validation_' + str(i) + '.pt'), 'wb') as file:\n",
     "        torch.save(dataset_tuning_validations[i], file, pickle_module=pickle, pickle_protocol=4)\n",
     "\n",
     "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'dataset_eval_train.pt'), 'wb') as file:\n",
@@ -496,6 +496,27 @@
     "    torch.save(dataset_eval_validation, file, pickle_module=pickle, pickle_protocol=4)\n",
     "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'dataset_eval_test.pt'), 'wb') as file:\n",
     "    torch.save(dataset_eval_test, file, pickle_module=pickle, pickle_protocol=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8006782f-4d8f-42c4-842a-eff4d1fa0e02",
+   "metadata": {},
+   "source": [
+    "Save scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b9284ca5-59d5-4d18-b7c2-99418df496b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_y_bid.pkl'), 'wb') as file:\n",
+    "    pickle.dump(scaler_y_bid, file)\n",
+    "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_y_ask.pkl'), 'wb') as file:\n",
+    "    pickle.dump(scaler_y_ask, file)"
    ]
   }
  ],
