--- a/Notebook study.ipynb
+++ b/Notebook study.ipynb
@@ -52,6 +52,7 @@
    "cell_type": "markdown",
    "id": "7059dbed-6531-4b87-a1e1-cb9f20ac0623",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -59,16 +60,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "380d09b8-4f46-40a3-b520-8c9f18163ff3",
-   "metadata": {},
-   "source": [
-    "Dataset class"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "27c95613-5dfd-4aec-9529-6978bb160198",
    "metadata": {},
    "outputs": [],
@@ -153,11 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b069126e-e906-40e3-bd78-1036877f4587",
    "metadata": {},
    "outputs": [],
    "source": [
+    "dataset_tuning_trains = []\n",
+    "dataset_tuning_validations = []\n",
+    "\n",
     "for i in range(4):\n",
     "        \n",
     "    with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'dataset_tuning_train_' + str(i) + '.pt'), 'rb') as file:\n",
@@ -167,13 +163,26 @@
     "        dataset_tuning_validations.append(torch.load(file, pickle_module=pickle))\n",
     "        \n",
     "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'dataset_eval_train.pt'), 'rb') as file:\n",
-    "    dataset_eval_train = torch.load(filem pickle_module=pickle)\n",
+    "    dataset_eval_train = torch.load(file, pickle_module=pickle)\n",
     "    \n",
     "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'dataset_eval_validation.pt'), 'rb') as file:\n",
-    "    dataset_eval_validation = torch.load(filem pickle_module=pickle)\n",
+    "    dataset_eval_validation = torch.load(file, pickle_module=pickle)\n",
     "    \n",
     "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'dataset_eval_test.pt'), 'rb') as file:\n",
-    "    dataset_eval_test = torch.load(filem pickle_module=pickle)"
+    "    dataset_eval_test = torch.load(file, pickle_module=pickle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "39e3b082-309a-4a42-8527-de28ce592f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_y_bid.pkl'), 'rb') as file:\n",
+    "    scaler_y_bid = pickle.load(file)\n",
+    "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_y_ask.pkl'), 'rb') as file:\n",
+    "    scaler_y_ask = pickle.load(file)"
    ]
   },
   {
@@ -188,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "0e4640bf-0f47-434f-9091-9f41b0ebafb3",
    "metadata": {},
    "outputs": [],
@@ -209,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "a62198aa-ce82-471b-84f5-448e44f61150",
    "metadata": {},
    "outputs": [],
@@ -226,7 +235,6 @@
    "cell_type": "markdown",
    "id": "f6dd37b7-9881-4cd1-98db-34ec2ef3241e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -334,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "62b2221d-9946-4b1a-bb96-e22acd326858",
    "metadata": {},
    "outputs": [],
@@ -396,7 +404,6 @@
    "cell_type": "markdown",
    "id": "3825a585-4a27-4d90-97bf-89207f639e65",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -429,7 +436,47 @@
    "execution_count": null,
    "id": "479dc04e-797a-4efb-b07b-b3f5e1c4632b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app 'pymlpipe.pymlpipeUI'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on all addresses (0.0.0.0)\n",
+      " * Running on http://127.0.0.1:8085\n",
+      " * Running on http://192.168.1.22:8085\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [01/Apr/2023 20:56:34] \"GET / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kevin\\Documents\\Dev\\forex_eur_chf\\modelrun\\Forex EUR CHF Bid 8627f2f1-9d37-47cc-b889-6cee1ba6bb14 info.yaml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [01/Apr/2023 20:56:34] \"GET /static/logo.svg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [01/Apr/2023 20:56:34] \"GET /static/filter.svg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [01/Apr/2023 20:56:37] \"GET /run/Forex%20EUR%20CHF%20Bid@8627f2f1-9d37-47cc-b889-6cee1ba6bb14 HTTP/1.1\" 308 -\n",
+      "127.0.0.1 - - [01/Apr/2023 20:56:37] \"GET /run/Forex%20EUR%20CHF%20Bid%408627f2f1-9d37-47cc-b889-6cee1ba6bb14/ HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [01/Apr/2023 20:56:37] \"GET /static/logo.svg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [01/Apr/2023 20:56:37] \"GET /static/download.png HTTP/1.1\" 304 -\n"
+     ]
+    }
+   ],
    "source": [
     "start_ui(host='0.0.0.0', port=8085)"
    ]
