Remove christmas and new year empty data and save scaler

--- a/Notebook preprocessing.ipynb
+++ b/Notebook preprocessing.ipynb
@@ -142,6 +142,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c64ded7d-0349-4282-b573-d086efd9b5f6",
+   "metadata": {},
+   "source": [
+    "Remove Christmas and New year closing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "612fad4b-aa02-426f-a75e-9ce70bef297f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_forex = df_forex[(df_forex.Month != 12) | (df_forex.Day != 25) | (df_forex.Hour < 8) | (df_forex.Hour > 21)]\n",
+    "df_forex = df_forex[(df_forex.Month != 12) | (df_forex.Day != 31) | (df_forex.Hour < 22)]\n",
+    "df_forex = df_forex[(df_forex.Month != 1) | (df_forex.Day != 1) | (df_forex.Hour > 21)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "76e4ab23-aa83-4e12-b238-5f9a253af52a",
    "metadata": {},
    "source": [
@@ -150,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d72ae691-baa0-4326-9084-84a0442b2621",
    "metadata": {},
    "outputs": [],
@@ -272,32 +292,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "2e66ba85-4acf-4b9d-be81-d0ffad76e70e",
    "metadata": {},
    "outputs": [],
    "source": [
     "idx_tuning_trains = [\n",
-    "    range(0, df_forex[(df_forex.Year == int(2020 + i / 2)) & (df_forex.Month == 1 + ((6 * i) % 12)) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30)\n",
-    "    for i in range(4)\n",
+    "    range(0, df_forex[(df_forex.Year == 2020) & (df_forex.Month == 1) & (df_forex.Day == 1) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30),\n",
+    "    range(0, df_forex[(df_forex.Year == 2020) & (df_forex.Month == 7) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30),\n",
+    "    range(0, df_forex[(df_forex.Year == 2021) & (df_forex.Month == 1) & (df_forex.Day == 3) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30),\n",
+    "    range(0, df_forex[(df_forex.Year == 2021) & (df_forex.Month == 7) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30)\n",
     "]\n",
     "\n",
     "idx_tuning_validations = [\n",
     "    range(\n",
-    "        df_forex[(df_forex.Year == int(2020 + i / 2)) & (df_forex.Month == 1 + ((6 * i) % 12)) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30,\n",
-    "        df_forex[(df_forex.Year == int(2020 + (i + 1) / 2)) & (df_forex.Month == 1 + ((6 * (i + 1)) % 12)) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30)\n",
-    "    for i in range(4)\n",
+    "        df_forex[(df_forex.Year == 2020) & (df_forex.Month == 1) & (df_forex.Day == 1) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30,\n",
+    "        df_forex[(df_forex.Year == 2020) & (df_forex.Month == 7) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30\n",
+    "    ),\n",
+    "    range(\n",
+    "        df_forex[(df_forex.Year == 2020) & (df_forex.Month == 7) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30,\n",
+    "        df_forex[(df_forex.Year == 2021) & (df_forex.Month == 1) & (df_forex.Day == 3) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30\n",
+    "    ),\n",
+    "    range(\n",
+    "        df_forex[(df_forex.Year == 2021) & (df_forex.Month == 1) & (df_forex.Day == 3) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30,\n",
+    "        df_forex[(df_forex.Year == 2021) & (df_forex.Month == 7) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30\n",
+    "    ),\n",
+    "    range(\n",
+    "        df_forex[(df_forex.Year == 2021) & (df_forex.Month == 7) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30,\n",
+    "        df_forex[(df_forex.Year == 2022) & (df_forex.Month == 1) & (df_forex.Day == 2) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30\n",
+    "    ),\n",
     "]\n",
     "\n",
-    "idx_eval_train = range(0, df_forex[(df_forex.Year == 2021) & (df_forex.Month == 1) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30)\n",
+    "idx_eval_train = range(0, df_forex[(df_forex.Year == 2021) & (df_forex.Month == 1) & (df_forex.Day == 3) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30)\n",
     "\n",
     "idx_eval_validation = range(\n",
-    "    df_forex[(df_forex.Year == 2021) & (df_forex.Month == 1) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30,\n",
-    "    df_forex[(df_forex.Year == 2022) & (df_forex.Month == 1) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30)\n",
+    "    df_forex[(df_forex.Year == 2021) & (df_forex.Month == 1) & (df_forex.Day == 3) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30,\n",
+    "    df_forex[(df_forex.Year == 2022) & (df_forex.Month == 1) & (df_forex.Day == 2) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30)\n",
     "\n",
     "idx_eval_test = range(\n",
-    "    df_forex[(df_forex.Year == 2022) & (df_forex.Month == 1) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30,\n",
-    "    df_forex[(df_forex.Year == 2023) & (df_forex.Month == 1) & (df_forex.Day == 1) & (df_forex.Hour == 0)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30)"
+    "    df_forex[(df_forex.Year == 2022) & (df_forex.Month == 1) & (df_forex.Day == 2) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30,\n",
+    "    df_forex[(df_forex.Year == 2023) & (df_forex.Month == 1) & (df_forex.Day == 1) & (df_forex.Hour == 22)].index[0] - N_PREVIOUS_MONTH_VALUES * 24 * 30)"
    ]
   },
   {
@@ -508,11 +542,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "b9284ca5-59d5-4d18-b7c2-99418df496b6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_now.pkl'), 'wb') as file:\n",
+    "    pickle.dump(scaler_now, file)\n",
+    "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_previous_hour.pkl'), 'wb') as file:\n",
+    "    pickle.dump(scaler_previous_hour, file)\n",
+    "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_previous_day.pkl'), 'wb') as file:\n",
+    "    pickle.dump(scaler_previous_day, file)\n",
+    "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_previous_week.pkl'), 'wb') as file:\n",
+    "    pickle.dump(scaler_previous_week, file)\n",
+    "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_previous_month.pkl'), 'wb') as file:\n",
+    "    pickle.dump(scaler_previous_month, file)\n",
+    "\n",
     "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_y_bid.pkl'), 'wb') as file:\n",
     "    pickle.dump(scaler_y_bid, file)\n",
     "with open(os.path.join(REPOSITORY_DATA_PREPROCESSED, 'scaler_y_ask.pkl'), 'wb') as file:\n",
