Add weekday to data

--- a/Notebook preprocessing.ipynb
+++ b/Notebook preprocessing.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from datetime import datetime\n",
     "\n",
     "import torch\n",
     "from torch.utils.data import Dataset\n",
@@ -162,6 +163,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "895fc25b-9bdc-4e27-a735-04e3a294986d",
+   "metadata": {},
+   "source": [
+    "Add weekday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c96421f9-98ae-4fd5-a1b1-fcfc9913f419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_forex['Weekday'] = df_forex.apply(lambda row: datetime(int(row.Year), int(row.Month), int(row.Day)).weekday(), axis=1)\n",
+    "df_forex.Weekday = df_forex.Weekday.apply(lambda x: (x + 1) % 7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "315149da-a53f-4334-bd5d-ab113b373951",
+   "metadata": {},
+   "source": [
+    "Reset index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d4f95d8d-a04a-4b91-b935-8fb0bb567f07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_forex.reset_index(inplace=True, drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "76e4ab23-aa83-4e12-b238-5f9a253af52a",
    "metadata": {},
    "source": [
@@ -170,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "d72ae691-baa0-4326-9084-84a0442b2621",
    "metadata": {},
    "outputs": [],
@@ -193,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "190fd1a5-7ee8-4589-b85e-4956bdda8b29",
    "metadata": {},
    "outputs": [],
@@ -207,12 +245,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "efd236f6-5de3-4e24-876d-346d0d1a539d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_date = df_forex[['Year', 'Month', 'Day', 'Hour']].to_numpy()\n",
+    "X_date = df_forex[['Year', 'Month', 'Day', 'Hour', 'Weekday']].to_numpy()\n",
     "X_now = df_forex[['Ask_High', 'Ask_Low', 'Ask_Close', 'Ask_Volume', 'Bid_High', 'Bid_Low', 'Bid_Close', 'Bid_Volume']].to_numpy()\n",
     "X_previous_hour = np.concatenate([X_now[N_PREVIOUS_HOUR_VALUES - 1 - i: X_now.shape[0] - 1 - i] for i in range(N_PREVIOUS_HOUR_VALUES)], axis=1)\n",
     "X_previous_day = np.concatenate([\n",
@@ -248,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "17e83c0c-0961-4eca-b33f-bb7d7098c43f",
    "metadata": {},
    "outputs": [],
@@ -268,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "34dc570c-f47d-423e-9197-eace12dc77dd",
    "metadata": {},
    "outputs": [],
@@ -292,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "2e66ba85-4acf-4b9d-be81-d0ffad76e70e",
    "metadata": {},
    "outputs": [],
@@ -344,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "de1b3f9f-f7a2-41ca-bc2d-8b2cceeaa520",
    "metadata": {},
    "outputs": [],
@@ -437,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "3185429a-0db0-4bfe-bdf7-457096432f00",
    "metadata": {},
    "outputs": [],
@@ -459,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "47d2f8e7-0c2a-4947-a17d-5ec021c5535b",
    "metadata": {},
    "outputs": [],
@@ -486,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "b305f2b6-dbd7-44e4-b85a-a898d5248efe",
    "metadata": {},
    "outputs": [],
@@ -511,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "2b8dab59-a42b-43bc-9413-e0c538d49327",
    "metadata": {},
    "outputs": [],
@@ -542,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "b9284ca5-59d5-4d18-b7c2-99418df496b6",
    "metadata": {},
    "outputs": [],
