--- a/Notebook study.ipynb
+++ b/Notebook study.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "48c3012f-408c-4eee-aa6b-507d075d7d36",
    "metadata": {},
    "outputs": [],
@@ -189,6 +189,7 @@
    "cell_type": "markdown",
    "id": "f5944eb4-9e4f-4355-9ce9-8970dbe0ebb1",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -6664,46 +6665,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "479dc04e-797a-4efb-b07b-b3f5e1c4632b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app 'pymlpipe.pymlpipeUI'\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-      " * Running on all addresses (0.0.0.0)\n",
-      " * Running on http://127.0.0.1:8085\n",
-      " * Running on http://10.195.68.233:8085\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [03/Apr/2023 11:11:32] \"GET / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kevin\\Documents\\Dev\\forex_eur_chf\\modelrun\\Forex EUR CHF Bid 2e5dc73e-5777-441c-aae4-08402b2a8409 info.yaml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/Apr/2023 11:11:32] \"GET /static/logo.svg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [03/Apr/2023 11:11:32] \"GET /static/filter.svg HTTP/1.1\" 304 -\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start_ui(host='0.0.0.0', port=8085)"
    ]
