Change behaviour of flag_transfer_cpu_gpu

--- a/Notebook preprocessing.ipynb
+++ b/Notebook preprocessing.ipynb
@@ -405,6 +405,7 @@
     "        self.n_previous_week_values = n_previous_week_values\n",
     "        self.n_previous_month_values = n_previous_month_values\n",
     "        self.n_features = n_features\n",
+    "        self.device = \"CPU\"\n",
     "        \n",
     "    def __len__(self):\n",
     "        \n",
@@ -452,6 +453,9 @@
     "        self.X_previous_month = self.X_previous_month.cuda()\n",
     "        self.y_bid = self.y_bid.cuda()\n",
     "        self.y_ask = self.y_ask.cuda()\n",
+    "        self.device = \"CUDA\"\n",
+    "        \n",
+    "        return self\n",
     "        \n",
     "    def cpu(self):\n",
     "        \n",
@@ -462,7 +466,10 @@
     "        self.X_previous_week = self.X_previous_week.cpu()\n",
     "        self.X_previous_month = self.X_previous_month.cpu()\n",
     "        self.y_bid = self.y_bid.cpu()\n",
-    "        self.y_ask = self.y_ask.cpu()"
+    "        self.y_ask = self.y_ask.cpu()\n",
+    "        self.device = \"CPU\"\n",
+    "        \n",
+    "        return self"
    ]
   },
   {
