--- a/Notebook preprocessing.ipynb
+++ b/Notebook preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "db2c9249-8ead-44fd-9c28-d898a955fe50",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3b49ea16-ecd3-41fd-af78-814ff50ebdd5",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4d849c83-618b-4d89-837c-0ad644cb95d8",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5e19c694-e7f4-4887-ac8f-54ae42bea5ed",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a1c82d44-b787-4cf0-8eb9-a82c6375f619",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c27f13e3-1239-4a52-9fe6-615903685107",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1de818e7-51bd-4e3c-a36d-aa2079c0a139",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "612fad4b-aa02-426f-a75e-9ce70bef297f",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c96421f9-98ae-4fd5-a1b1-fcfc9913f419",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d4f95d8d-a04a-4b91-b935-8fb0bb567f07",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d72ae691-baa0-4326-9084-84a0442b2621",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "190fd1a5-7ee8-4589-b85e-4956bdda8b29",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "efd236f6-5de3-4e24-876d-346d0d1a539d",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "17e83c0c-0961-4eca-b33f-bb7d7098c43f",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "34dc570c-f47d-423e-9197-eace12dc77dd",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2e66ba85-4acf-4b9d-be81-d0ffad76e70e",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "de1b3f9f-f7a2-41ca-bc2d-8b2cceeaa520",
    "metadata": {},
    "outputs": [],
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3185429a-0db0-4bfe-bdf7-457096432f00",
    "metadata": {},
    "outputs": [],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "47d2f8e7-0c2a-4947-a17d-5ec021c5535b",
    "metadata": {},
    "outputs": [],
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b305f2b6-dbd7-44e4-b85a-a898d5248efe",
    "metadata": {},
    "outputs": [],
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "2b8dab59-a42b-43bc-9413-e0c538d49327",
    "metadata": {},
    "outputs": [],
@@ -582,12 +582,12 @@
    "id": "8006782f-4d8f-42c4-842a-eff4d1fa0e02",
    "metadata": {},
    "source": [
-    "Save scaler"
+    "Save scalers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "b9284ca5-59d5-4d18-b7c2-99418df496b6",
    "metadata": {},
    "outputs": [],
