Change order of result in MLOps UI

--- a/Notebook study.ipynb
+++ b/Notebook study.ipynb
@@ -192,6 +192,7 @@
    "cell_type": "markdown",
    "id": "ffb5967c-1dd4-4f70-bc83-1beb822a444c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "1a754d44-a53e-404d-9aea-def71b534bd2",
+   "id": "52ab1645-49dd-4c5a-a0bd-d095856d9cba",
    "metadata": {
     "tags": []
    },
@@ -376,7 +377,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -577,7 +578,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -778,7 +779,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -979,7 +980,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -1180,7 +1181,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -1381,7 +1382,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -1582,7 +1583,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -1783,7 +1784,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -1984,7 +1985,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -2185,7 +2186,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -2386,7 +2387,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -2587,7 +2588,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -2788,7 +2789,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -3000,7 +3001,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -3201,7 +3202,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
@@ -3402,7 +3403,7 @@
     "    patience=TESTING_PATIENCE, \n",
     "    epochs=TESTING_EPOCHS)\n",
     "\n",
-    "results['1. MSE tuning normalized'] = study.best_value\n",
+    "results['7. MSE tuning normalized'] = study.best_value\n",
     "\n",
     "mlp.set_version(MODEL_VERSION)\n",
     "\n",
